# Propos---Banco-de-Dados-de-Quest-es-de-L-gica-Proposicional

./: README.md  pyproject.toml
dados/: contextos.json  contextos_legado.json  questoes.json  questoes_legado.json
exemplos/: 01_usar_banco.py  02_integrar_api.py
src/banco_questoes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/propos/: __init__.py  adicionador.py  banco.py  modelos.py
src/propos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/propos/utils/: analise.py  enriquecedor.py
