[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "propos"
version = "0.1.0"
description = "Banco de questões de lógica proposicional com contextos em linguagem natural"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Source = "https://github.com/anomalyco/banco-questoes"

[tool.setuptools.packages.find]
where = ["src"]
include = ["propos*"]
